process one json input for exception

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -611,6 +611,80 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_one_json_input(first_input):\n",
+    "    event_id = first_input['EventId']\n",
+    "    temp_event_list = []\n",
+    "    all_event_types = set((\"TradeEvent\", \"FXMidEvent\", \"ConfigEvent\"))\n",
+    "    for i in range(1, event_id+1):\n",
+    "        temp_event_list.extend(events_dict[i])\n",
+    "\n",
+    "    # check if all event types are present\n",
+    "    for event in temp_event_list:\n",
+    "        event_type = event['EventType']\n",
+    "        if event_type in all_event_types:\n",
+    "            all_event_types.remove(event_type)\n",
+    "\n",
+    "    quote_status = \"\"\n",
+    "    if len(all_event_types) != 0:\n",
+    "        quote_status = \"EXCEPTION\"\n",
+    "    \n",
+    "    net_quantity = 0\n",
+    "    for one_event in temp_event_list:\n",
+    "        if one_event['EventType'] == 'TradeEvent':\n",
+    "            if one_event['Ccy'] == first_input['Ccy'] and one_event['Tenor'] == first_input['Tenor']:\n",
+    "                net_quantity += calc.change_quantity(one_event)\n",
+    "\n",
+    "    small_output_json = {\n",
+    "        \"EventId\": None, \n",
+    "        \"Ccy\": None,\n",
+    "        \"Tenor\": None,\n",
+    "        \"Position\": None,\n",
+    "        \"Bid\": None,\n",
+    "        \"Ask\": None,\n",
+    "        \"QuoteStatus\": None\n",
+    "    }\n",
+    "\n",
+    "    small_output_json['EventId'] = first_input['EventId']\n",
+    "    small_output_json['Ccy'] = first_input['Ccy']\n",
+    "    small_output_json['Tenor'] = first_input['Tenor']\n",
+    "    small_output_json['Position'] = net_quantity\n",
+    "    small_output_json['QuoteStatus'] = quote_status\n",
+    "\n",
+    "    return small_output_json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'EventId': 5,\n",
+       " 'Ccy': 'CHX',\n",
+       " 'Tenor': '1M',\n",
+       " 'Position': -3000,\n",
+       " 'Bid': None,\n",
+       " 'Ask': None,\n",
+       " 'QuoteStatus': 'EXCEPTION'}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "process_one_json_input(inputs[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -688,6 +762,48 @@
     "            net_quantity += calc.change_quantity(one_event)\n",
     "\n",
     "net_quantity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'EventId': 5,\n",
+       " 'Ccy': 'CHX',\n",
+       " 'Tenor': '1M',\n",
+       " 'Position': -3000,\n",
+       " 'Bid': None,\n",
+       " 'Ask': None,\n",
+       " 'QuoteStatus': 'EXCEPTION'}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "small_output_json = {\n",
+    "    \"EventId\": None, \n",
+    "    \"Ccy\": None,\n",
+    "    \"Tenor\": None,\n",
+    "    \"Position\": None,\n",
+    "    \"Bid\": None,\n",
+    "    \"Ask\": None,\n",
+    "    \"QuoteStatus\": None\n",
+    "}\n",
+    "\n",
+    "small_output_json['EventId'] = first_input['EventId']\n",
+    "small_output_json['Ccy'] = first_input['Ccy']\n",
+    "small_output_json['Tenor'] = first_input['Tenor']\n",
+    "small_output_json['Position'] = net_quantity\n",
+    "small_output_json['QuoteStatus'] = quote_status\n",
+    "\n",
+    "small_output_json"
    ]
   }
  ],
