check missing data

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,56 +632,70 @@
     "    if len(all_event_types) != 0:\n",
     "        quote_status = \"EXCEPTION\"\n",
     "    \n",
-    "    net_quantity = 0\n",
-    "    for one_event in temp_event_list:\n",
-    "        if one_event['EventType'] == 'TradeEvent':\n",
-    "            if one_event['Ccy'] == first_input['Ccy'] and one_event['Tenor'] == first_input['Tenor']:\n",
-    "                net_quantity += calc.change_quantity(one_event)\n",
+    "    # check if TradeEvent is present in all_event_types\n",
+    "    trade_exist = False\n",
+    "    if \"TradeEvent\" not in all_event_types:\n",
+    "        net_quantity = \"NA\"\n",
+    "        quote_status = \"EXCEPTION\"\n",
+    "    else:\n",
+    "        net_quantity = 0\n",
+    "        for one_event in temp_event_list:\n",
+    "            if one_event['EventType'] == 'TradeEvent':\n",
+    "                if one_event['Ccy'] == first_input['Ccy'] and one_event['Tenor'] == first_input['Tenor']:\n",
+    "                    trade_exist = True\n",
+    "                    net_quantity += calc.change_quantity(one_event)\n",
     "\n",
     "    small_output_json = {\n",
     "        \"EventId\": None, \n",
     "        \"Ccy\": None,\n",
     "        \"Tenor\": None,\n",
-    "        \"Position\": None,\n",
-    "        \"Bid\": None,\n",
-    "        \"Ask\": None,\n",
+    "        \"Position\": \"NA\",\n",
+    "        \"Bid\": \"NA\",\n",
+    "        \"Ask\": \"NA\",\n",
     "        \"QuoteStatus\": None\n",
     "    }\n",
     "\n",
     "    small_output_json['EventId'] = first_input['EventId']\n",
     "    small_output_json['Ccy'] = first_input['Ccy']\n",
     "    small_output_json['Tenor'] = first_input['Tenor']\n",
-    "    small_output_json['Position'] = net_quantity\n",
-    "    small_output_json['QuoteStatus'] = quote_status\n",
+    "    small_output_json['Position'] = net_quantity if trade_exist else \"NA\"\n",
+    "    small_output_json['QuoteStatus'] = quote_status if trade_exist else \"EXCEPTION\"\n",
     "\n",
     "    return small_output_json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'EventId': 5,\n",
-       " 'Ccy': 'CHX',\n",
+       "{'EventId': 20,\n",
+       " 'Ccy': 'GBX',\n",
        " 'Tenor': '1M',\n",
-       " 'Position': -3000,\n",
-       " 'Bid': None,\n",
-       " 'Ask': None,\n",
+       " 'Position': 'NA',\n",
+       " 'Bid': 'NA',\n",
+       " 'Ask': 'NA',\n",
        " 'QuoteStatus': 'EXCEPTION'}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "process_one_json_input(inputs[0])"
+    "process_one_json_input(inputs[2])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
