--- a/testing.ipynb
+++ b/testing.ipynb
@@ -611,16 +611,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def process_one_json_input(first_input):\n",
+    "    small_output_json = {\n",
+    "        \"EventId\": first_input['EventId'], \n",
+    "        \"Ccy\": first_input['Ccy'],\n",
+    "        \"Tenor\": first_input['Tenor'],\n",
+    "        \"Position\": \"NA\",\n",
+    "        \"Bid\": \"NA\",\n",
+    "        \"Ask\": \"NA\",\n",
+    "        \"QuoteStatus\": \"Exception\"\n",
+    "    }\n",
+    "\n",
     "    event_id = first_input['EventId']\n",
     "    temp_event_list = []\n",
     "    all_event_types = set((\"TradeEvent\", \"FXMidEvent\", \"ConfigEvent\"))\n",
+    "\n",
+    "    latest_FXMidEvent = {}\n",
+    "    latest_ConfigEvent = {}\n",
     "    for i in range(1, event_id+1):\n",
-    "        temp_event_list.extend(events_dict[i])\n",
+    "        if i in events_dict:\n",
+    "            temp_event_list.extend(events_dict[i])\n",
     "\n",
     "    # check if all event types are present\n",
     "    for event in temp_event_list:\n",
@@ -628,78 +642,85 @@
     "        if event_type in all_event_types:\n",
     "            all_event_types.remove(event_type)\n",
     "\n",
-    "    quote_status = \"\"\n",
-    "    if len(all_event_types) != 0:\n",
-    "        quote_status = \"EXCEPTION\"\n",
-    "    \n",
     "    # check if TradeEvent is present in all_event_types\n",
     "    trade_exist = False\n",
+    "    net_quantity = 0\n",
+    "\n",
+    "    # if \"TradeEvent\" not in all_event_types it means that tradeEvent exist in the event.json which means we need to calculate the net_quantity\n",
     "    if \"TradeEvent\" not in all_event_types:\n",
-    "        net_quantity = \"NA\"\n",
-    "        quote_status = \"EXCEPTION\"\n",
-    "    else:\n",
-    "        net_quantity = 0\n",
     "        for one_event in temp_event_list:\n",
     "            if one_event['EventType'] == 'TradeEvent':\n",
     "                if one_event['Ccy'] == first_input['Ccy'] and one_event['Tenor'] == first_input['Tenor']:\n",
     "                    trade_exist = True\n",
     "                    net_quantity += calc.change_quantity(one_event)\n",
+    "        if not trade_exist:\n",
+    "            return small_output_json\n",
+    "        small_output_json[\"Position\"] = net_quantity\n",
+    "    \n",
+    "    if len(all_event_types) != 0:\n",
+    "        return small_output_json\n",
     "\n",
-    "    small_output_json = {\n",
-    "        \"EventId\": None, \n",
-    "        \"Ccy\": None,\n",
-    "        \"Tenor\": None,\n",
-    "        \"Position\": \"NA\",\n",
-    "        \"Bid\": \"NA\",\n",
-    "        \"Ask\": \"NA\",\n",
-    "        \"QuoteStatus\": None\n",
-    "    }\n",
+    "    # get latest FXMidEvent and ConfigEvent\n",
+    "    for event in temp_event_list:\n",
+    "        if event['EventType'] == 'FXMidEvent' and event['Ccy'] == first_input['Ccy']:\n",
+    "            latest_FXMidEvent = event\n",
+    "        elif event['EventType'] == 'ConfigEvent':\n",
+    "            latest_ConfigEvent = event\n",
     "\n",
-    "    small_output_json['EventId'] = first_input['EventId']\n",
-    "    small_output_json['Ccy'] = first_input['Ccy']\n",
-    "    small_output_json['Tenor'] = first_input['Tenor']\n",
-    "    small_output_json['Position'] = net_quantity if trade_exist else \"NA\"\n",
-    "    small_output_json['QuoteStatus'] = quote_status if trade_exist else \"EXCEPTION\"\n",
+    "    rate = latest_FXMidEvent['rate']\n",
+    "    skew_ratio = latest_ConfigEvent['DivisorRatio']\n",
+    "    spread = latest_ConfigEvent['Spread']\n",
+    "    m = latest_ConfigEvent['m']\n",
+    "    b = latest_ConfigEvent['b']\n",
+    "    tenor = first_input['Tenor']\n",
+    "\n",
+    "    # calculate variance\n",
+    "    variance = calc.variance(m, tenor, b)\n",
+    "    # calculate skew\n",
+    "    skew = calc.skew(net_quantity, skew_ratio, variance)\n",
+    "    # calculate new_mid\n",
+    "    new_mid = calc.new_mid(rate, skew)\n",
+    "    # calculate bid\n",
+    "    bid = calc.bid(new_mid, spread)\n",
+    "    # calculate ask\n",
+    "    ask = calc.ask(new_mid, spread)\n",
+    "\n",
+    "    small_output_json[\"Bid\"] = bid\n",
+    "    small_output_json[\"Ask\"] = ask\n",
+    "    small_output_json[\"QuoteStatus\"] = \"TRADABLE\"\n",
     "\n",
     "    return small_output_json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'EventId': 20,\n",
+       "{'EventId': 25,\n",
        " 'Ccy': 'GBX',\n",
        " 'Tenor': '1M',\n",
-       " 'Position': 'NA',\n",
-       " 'Bid': 'NA',\n",
-       " 'Ask': 'NA',\n",
-       " 'QuoteStatus': 'EXCEPTION'}"
+       " 'Position': 100,\n",
+       " 'Bid': 0.7996,\n",
+       " 'Ask': 0.7997,\n",
+       " 'QuoteStatus': 'TRADABLE'}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "process_one_json_input(inputs[2])"
+    "process_one_json_input(inputs[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +729,7 @@
        "{'Ccy': 'CHX', 'Tenor': '1M', 'EventId': 5}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +782,7 @@
        "-3000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +816,7 @@
        " 'QuoteStatus': 'EXCEPTION'}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
