pass all sample events

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,10 +21,13 @@
     "\n",
     "event_path = f'{folder_name}/sample_events.json'\n",
     "input_path = f'{folder_name}/sample_input.json'\n",
+    "output_path = f'{folder_name}/sample_output.json'\n",
     "with open(event_path, 'r') as f:\n",
     "    events = json.load(f)\n",
     "with open(input_path, 'r') as f:\n",
-    "    inputs = json.load(f)"
+    "    inputs = json.load(f)\n",
+    "with open(output_path, 'r') as f:\n",
+    "    outputs = json.load(f)"
    ]
   },
   {
@@ -611,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +626,7 @@
     "        \"Position\": \"NA\",\n",
     "        \"Bid\": \"NA\",\n",
     "        \"Ask\": \"NA\",\n",
-    "        \"QuoteStatus\": \"Exception\"\n",
+    "        \"QuoteStatus\": \"EXCEPTION\"\n",
     "    }\n",
     "\n",
     "    event_id = first_input['EventId']\n",
@@ -687,121 +690,18 @@
     "\n",
     "    small_output_json[\"Bid\"] = bid\n",
     "    small_output_json[\"Ask\"] = ask\n",
+    "\n",
     "    small_output_json[\"QuoteStatus\"] = \"TRADABLE\"\n",
+    "    if bid > ask or calc.varies(bid, rate) or calc.varies(ask, rate):\n",
+    "        small_output_json[\"QuoteStatus\"] = \"NON-TRADABLE\"\n",
+    "\n",
     "\n",
     "    return small_output_json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'EventId': 25,\n",
-       " 'Ccy': 'GBX',\n",
-       " 'Tenor': '1M',\n",
-       " 'Position': 100,\n",
-       " 'Bid': 0.7996,\n",
-       " 'Ask': 0.7997,\n",
-       " 'QuoteStatus': 'TRADABLE'}"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "process_one_json_input(inputs[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Ccy': 'CHX', 'Tenor': '1M', 'EventId': 5}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "first_input = inputs[0]\n",
-    "first_input"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "EXCEPTION\n"
-     ]
-    }
-   ],
-   "source": [
-    "event_id = first_input['EventId']\n",
-    "temp_event_list = []\n",
-    "all_event_types = set((\"TradeEvent\", \"FXMidEvent\", \"ConfigEvent\"))\n",
-    "for i in range(1, event_id+1):\n",
-    "    temp_event_list.extend(events_dict[i])\n",
-    "\n",
-    "# check if all event types are present\n",
-    "for event in temp_event_list:\n",
-    "    event_type = event['EventType']\n",
-    "    if event_type in all_event_types:\n",
-    "        all_event_types.remove(event_type)\n",
-    "\n",
-    "quote_status = \"\"\n",
-    "if len(all_event_types) != 0:\n",
-    "    quote_status = \"EXCEPTION\"\n",
-    "print(quote_status)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-3000"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# for calculating net quantity we need to consider only TradeEvents\n",
-    "# must be same currency and tenor\n",
-    "net_quantity = 0\n",
-    "for one_event in temp_event_list:\n",
-    "    if one_event['EventType'] == 'TradeEvent':\n",
-    "        if one_event['Ccy'] == first_input['Ccy'] and one_event['Tenor'] == first_input['Tenor']:\n",
-    "            net_quantity += calc.change_quantity(one_event)\n",
-    "\n",
-    "net_quantity"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -811,34 +711,33 @@
        " 'Ccy': 'CHX',\n",
        " 'Tenor': '1M',\n",
        " 'Position': -3000,\n",
-       " 'Bid': None,\n",
-       " 'Ask': None,\n",
+       " 'Bid': 'NA',\n",
+       " 'Ask': 'NA',\n",
        " 'QuoteStatus': 'EXCEPTION'}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "small_output_json = {\n",
-    "    \"EventId\": None, \n",
-    "    \"Ccy\": None,\n",
-    "    \"Tenor\": None,\n",
-    "    \"Position\": None,\n",
-    "    \"Bid\": None,\n",
-    "    \"Ask\": None,\n",
-    "    \"QuoteStatus\": None\n",
-    "}\n",
-    "\n",
-    "small_output_json['EventId'] = first_input['EventId']\n",
-    "small_output_json['Ccy'] = first_input['Ccy']\n",
-    "small_output_json['Tenor'] = first_input['Tenor']\n",
-    "small_output_json['Position'] = net_quantity\n",
-    "small_output_json['QuoteStatus'] = quote_status\n",
-    "\n",
-    "small_output_json"
+    "process_one_json_input(inputs[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, input in enumerate(inputs):\n",
+    "    my_output = process_one_json_input(input)\n",
+    "    if my_output != outputs[i]:\n",
+    "        print(\"Wrong\")\n",
+    "        print(my_output)\n",
+    "        print(outputs[i])\n",
+    "        break"
    ]
   }
  ],
